--- a/.github/workflows/shared-ci-library.yml
+++ b/.github/workflows/shared-ci-library.yml
@@ -30,3 +30,5 @@ jobs:
       - name: Publish coverage
         if: ${{ github.event.inputs.isScheduled != 'true' }}
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
