--- a/.github/workflows/shared-publish-release.yml
+++ b/.github/workflows/shared-publish-release.yml
@@ -44,8 +44,9 @@ jobs:
         run: make ${{ github.event.inputs.makeTarget }}
 
       - name: Publish release
-        uses: ghalactic/github-release-from-tag@v5
+        uses: ghalactic/github-release-from-tag@v6
         with:
+          makeLatest: semver
           reactions: hooray,heart,rocket
           discussionCategory: ${{ steps.checkTag.outputs.isSemVer == 'true' && github.event.inputs.discussionCategory || '' }}
           discussionReactions: ${{ (github.event.inputs.discussionCategory && steps.checkTag.outputs.isSemVer == 'true') && 'hooray,heart,rocket' || '' }}
